--- a/bookinng2.vcxproj
+++ b/bookinng2.vcxproj
@@ -88,6 +88,7 @@
     <ClInclude Include="Hotel.h" />
     <ClInclude Include="Reservation.h" />
     <ClInclude Include="Room.h" />
+    <ClInclude Include="Router.h" />
     <ClInclude Include="sqlite3.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -102,6 +103,7 @@
     <ClCompile Include="Hotel.cpp" />
     <ClCompile Include="Reservation.cpp" />
     <ClCompile Include="Room.cpp" />
+    <ClCompile Include="Router.cpp" />
     <ClCompile Include="sqlite3.c" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="User.cpp" />
