--- a/bookinng2.vcxproj
+++ b/bookinng2.vcxproj
@@ -99,7 +99,7 @@
     <ClCompile Include="bookinng2.cpp" />
     <ClCompile Include="City.cpp" />
     <ClCompile Include="Country.cpp" />
-    <ClCompile Include="global.cpp" />
+    <ClCompile Include="globals.cpp" />
     <ClCompile Include="Hotel.cpp" />
     <ClCompile Include="Reservation.cpp" />
     <ClCompile Include="Room.cpp" />
